--- a/style.css
+++ b/style.css
@@ -284,7 +284,7 @@ justify-content:space-between;
 
 .services-web
 {
-    background-image: url(img/Creative\ mini\ designers\ changing\ website\ interface-2.jpg);
+    background-image: url(img/WEB-yslygi.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     height: 150vh;
@@ -295,7 +295,7 @@ justify-content:space-between;
 
 .services-e-commerce
 {
-    background-image: url(img/E-COMMERCE.jpg);
+    background-image: url(img/E-COMMERCE-yslygi.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     width: auto;
@@ -306,7 +306,7 @@ justify-content:space-between;
 
 .services-mobile
 {
-    background-image: url(img/mobile-uslugi.jpg);
+    background-image: url(img/MOBILE-yslygi.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     width: auto;
