--- a/style.css
+++ b/style.css
@@ -75,8 +75,8 @@ justify-content:space-between;
 .development
 {
     margin-left: 2rem;
-    font-size: 20px;
-    font-weight:300;
+    font-size: 25px;
+    font-weight:400;
 }
 
 /* .application
@@ -109,11 +109,13 @@ justify-content:space-between;
 #buttonzaya
 {
     text-transform: uppercase;
-    border-radius: 45px;
-    letter-spacing: 1.8px;
+    border-radius: 100px;
+    letter-spacing: 3px;
     color: black;
     text-decoration: none;
     transition: .5s;
+    font-weight: 250;
+    font-size: 20px;
 }
 
 /* WEB */
@@ -173,18 +175,34 @@ justify-content:space-between;
 
 
 /* О нас (About team) */
+.About-team
+{
+    background-image: url(img/default.svg);
+    background-position: center;
+    height: 200vh;
+}
 .SEKL
 {
-    height: 200vh;
     font-weight: 300;
     font-size: 60px;
     text-align: center;
     color: blue;
-    background-image: url(img/default.svg);
-    background-position: center;
 }
 
+.project-types
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    font-size: 25px;
+    font-weight: 300;
+}
 
+.SEKL-paragrah
+{
+    font-size: 40px;
+    font-weight: 300;
+}
 
 /* Проект */
 .Projects
@@ -214,8 +232,7 @@ justify-content:space-between;
     font-size: 120px;
     text-align: center;
     text-shadow: rgba(0, 0, 0, 0.308) 6.7px 8px 2px;
-    /* animation: shadow 0s ease-out calc(1);
-    animation-iteration-count: calc(1); */
+    /* animation: shadow 3s ease-out normal; */
 }
 
 /* @keyframes shadow
@@ -391,3 +408,21 @@ justify-content:space-between;
 {
     margin-top: 50vh;
 }
+
+
+
+/*  */
+/*  */
+/*  */
+/* СМАРТФОН */
+/*  */
+/*  */
+/*  */
+
+@media(max-weight:)
+{
+
+}
+
+/* НАВИГАЦИЯ */
+
