--- a/style.css
+++ b/style.css
@@ -183,8 +183,8 @@ justify-content:space-between;
 }
 .SEKL
 {
-    font-weight: 300;
-    font-size: 60px;
+    font-weight: 400;
+    font-size: 70px;
     text-align: center;
     color: blue;
 }
@@ -208,6 +208,7 @@ justify-content:space-between;
 .Projects
 {
     font-size: 60px;
+    font-weight: 300;
     height: 100vh;
     text-align: center;
     max-width: 100%;
@@ -268,7 +269,8 @@ justify-content:space-between;
 .services-head
 {
     margin-top: 0;
-    font-size: 40px;
+    font-size: 60px;
+    font-weight: 300;
     height: 3vh;
     z-index: 2;
 }
@@ -373,6 +375,8 @@ justify-content:space-between;
 
 .contacts-head
 {
+    font-size: 60px;
+    font-weight: 300;
     height: 3vh;
 }
 
@@ -419,9 +423,9 @@ justify-content:space-between;
 /*  */
 /*  */
 
-@media(max-weight:)
+@media(max-width:576px)
 {
-
+  
 }
 
 /* НАВИГАЦИЯ */
