--- a/style.css
+++ b/style.css
@@ -118,6 +118,66 @@ justify-content:space-between;
     font-size: 20px;
 }
 
+/* ФОРМА */
+.Forma
+{
+    display: none;
+    width: 65%;
+    height: 450vh;
+    z-index: -10;
+    background-color: black;
+    left: auto;
+    top:0;
+    overflow: hidden;
+    position: fixed;
+    right: 0;
+}
+
+.bi-x
+{
+    color: gray; 
+}
+
+.bi-x:hover
+{
+    color: white;
+    cursor: pointer;
+    transition: 0.8s; 
+}
+
+.close-btn
+{
+    margin-right: 0px;
+    margin-top: 1.5em;
+    margin-left: 50em;
+}
+@keyframes move-left 
+{
+    0%
+    {
+        right: -1000px; 
+    } 
+    100%
+    {
+        right: 0px;
+    }   
+}
+
+@keyframes move-right 
+{
+    0%
+    {
+        right: 0px; 
+    } 
+    100%
+    {
+        right: -1000px;
+        display: none;
+        z-index: -10;
+        animation-fill-mode:forwards;
+    }   
+}
+
 /* WEB */
 .web-sites
 {
@@ -233,7 +293,7 @@ justify-content:space-between;
     font-size: 120px;
     text-align: center;
     text-shadow: rgba(0, 0, 0, 0.308) 6.7px 8px 2px;
-    /* animation: shadow 3s ease-out normal; */
+    /* animation: shadow 3s ease-out 0s; */
 }
 
 /* @keyframes shadow
