--- a/style.css
+++ b/style.css
@@ -147,15 +147,17 @@ justify-content:space-between;
 
 .close-btn
 {
-    margin-right: 0px;
+    display: flex;
+    justify-content: right;
+    margin-right: 1em;
     margin-top: 1.5em;
-    margin-left: 50em;
 }
+
 @keyframes move-left 
 {
     0%
     {
-        right: -1000px; 
+        right: -10000px; 
     } 
     100%
     {
@@ -171,7 +173,7 @@ justify-content:space-between;
     } 
     100%
     {
-        right: -1000px;
+        right: -10000px;
         display: none;
         z-index: -10;
         animation-fill-mode:forwards;
