--- a/style.css
+++ b/style.css
@@ -477,7 +477,8 @@ justify-content:space-between;
     width: 100%;
     margin-left: 10px;
     height: auto;
-    color: blue;
+    /* text-align: right; */
+    margin-top: 50vh;
 }
 
 .services-web
@@ -497,6 +498,9 @@ justify-content:space-between;
     /* font-family:'Goldman', cursive; */
     font-family: 'Space Mono', monospace;
     font-size: 30px;
+    /* text-align: right;
+    width: 100%; */
+    margin-top: 50vh;
 }
 
 .services-e-commerce
@@ -515,6 +519,9 @@ justify-content:space-between;
 {
     font-family: 'Space Mono', monospace;
     font-size: 30px;
+    /* text-align: right;
+    width: 100%; */
+    margin-top: 50vh;
 }
 
 .services-mobile
@@ -533,6 +540,9 @@ justify-content:space-between;
 {
     font-family: 'Space Mono', monospace;
     font-size: 30px;
+    /* text-align: right;
+    width: 100%; */
+    margin-top: 50vh;
 }
 
 /* Цены */
