--- a/style.css
+++ b/style.css
@@ -14,6 +14,13 @@
     width: auto;
 }
 
+@media(max-width:400px)
+{
+    .navigation
+    {
+        display: none;
+    }
+}
 .nav-list
 {
 padding: .5rem 1rem;
@@ -35,6 +42,14 @@ justify-content:space-between;
     .nav-list li
     {
         font-size: 2em;
+    } 
+}
+
+@media(max-width:400px)
+{
+    .nav-list li
+    {
+        font-size: 1em;
     } 
 }
 
@@ -97,11 +112,21 @@ justify-content:space-between;
 
 @media (min-width: 1920px)
 {
-        .development
+    .development
     {
         font-size: 2em;
     }
 }
+
+@media(max-width:400px)
+{
+    .development
+    {
+        font-size: 1.4em;
+        margin-left: 1em;
+    }
+}
+
 /* .application
 {
     font-size: 15px;
@@ -140,6 +165,17 @@ justify-content:space-between;
     }
 }
 
+@media(max-width:400px)
+{
+    .btn-zayavka
+    {
+        margin: -120px 0 0 -300px;
+        margin-top: -10rem;
+        margin-left: -8.5rem;
+        margin-bottom: 20rem;
+    }
+}
+
 #buttonzaya
 {
     text-transform: uppercase;
@@ -158,6 +194,14 @@ justify-content:space-between;
     #buttonzaya
     {
         font-size: 2em;
+    }
+}
+
+@media(max-width:400px)
+{
+    #buttonzaya
+    {
+        font-size: 1em;
     }
 }
 
@@ -231,6 +275,36 @@ justify-content:space-between;
         z-index: -10;
         animation-fill-mode:forwards;
     }   
+}
+
+@media(max-width:400px)
+{
+    .Forma
+    {
+        width: 100%;
+    }
+
+    .close-btn
+    {
+        width: 100%;
+    }
+
+    .bi-x
+    {
+        margin-right: 36.5em;
+    }
+
+    @keyframes move-left 
+    {
+        0%
+        {
+            left: 500px; 
+        } 
+        100%
+        {
+            left: 0px;
+        }   
+    }
 }
 
 .send-application
@@ -341,6 +415,39 @@ justify-content:space-between;
     }
 }
 
+@media(max-width:400px)
+{
+    .send-application
+    {
+        font-size: 2.5em;
+    }
+
+    .your-name
+    {
+        width: 17em;
+    }
+
+    .your-tel
+    {
+        width: 17em;
+    }
+
+    .your-email
+    {
+        width: 17em;
+    }
+
+    .comment
+    {
+        width: 17em;
+    }
+
+    .text-area-comment
+    {
+        width: 17em;
+    }
+}
+
 .attach-file
 {
     margin-left: 2em;
@@ -413,6 +520,14 @@ justify-content:space-between;
     }
 }
 
+@media(max-width:400px)
+{
+    .send-btn
+    {
+        margin-left: 4.5em;
+    }
+}
+
 .void
 {
     height: 2em;
@@ -457,6 +572,18 @@ justify-content:space-between;
         margin-top: -70em;
     }
 }
+
+/* @media(max-width:400px)
+{
+    .web-sites
+    {
+        background-image: url(img\Mobile\WEB.jpg);
+        background-size: contain;
+        position: relative;
+        width: 100%;
+        margin-left: 0px;
+    }
+} */
 
 /* Mobile */
 
