--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
         display: none;
     }
 }
+
 .nav-list
 {
 padding: .5rem 1rem;
@@ -282,6 +283,7 @@ justify-content:space-between;
     .Forma
     {
         width: 100%;
+        height: 200vh;
     }
 
     .close-btn
@@ -291,7 +293,8 @@ justify-content:space-between;
 
     .bi-x
     {
-        margin-right: 36.5em;
+        /* margin-right: 36.5em; */
+        margin-right: 0em;
     }
 
     @keyframes move-left 
