--- a/style.css
+++ b/style.css
@@ -199,10 +199,10 @@ justify-content:space-between;
 }
 
 @media(max-width:400px)
-{
+{ 
     #buttonzaya
     {
-        font-size: 1em;
+        font-size: .7em;
     }
 }
 
@@ -614,6 +614,21 @@ justify-content:space-between;
     }
 }
 
+@media(max-width:400px)
+{
+    .mobile
+    {
+        background-image: url(img/Mobile/Mobile-dev.jpg);
+        background-size: contain;
+        background-repeat: no-repeat;
+        width: 100%;
+        margin-left: 0px;
+        height: 400px;
+        font-size: 1.1em;
+        padding-bottom: 20vh;
+    }
+} 
+
 /* Support */
 
 .support
@@ -633,6 +648,21 @@ justify-content:space-between;
     .support
     {
         font-size: 1em;
+    }
+}
+
+@media(max-width:400px)
+{
+    .support
+    {
+        background-image: url(img/Mobile/Sites\,services\,support.jpg);
+        background-size: contain;
+        background-repeat: no-repeat;
+        width: 100%;
+        margin-left: 0px;
+        height: 400px;
+        font-size: 1.1em;
+        padding-bottom: 20vh;
     }
 }
 
