--- a/style.css
+++ b/style.css
@@ -709,9 +709,19 @@ justify-content:space-between;
     .About-team
     {
         background-repeat: no-repeat;
-        background-size: cover;
+        background-size: contain;
         width: 100%;
         height: 100vh;
+    }
+
+    .text-about-SEKL
+    {
+        font-size: 1.5em;
+    }
+
+    .SEKL-paragrah
+    {
+        font-size: 1.5em;
     }
 }
 
@@ -750,6 +760,28 @@ justify-content:space-between;
     .Projects
     {
         padding-top: .5em;
+    }
+}
+
+@media(max-width:400px)
+{
+    .Project
+    {
+        height: 100vh;
+        background-image: url(img/Mobile/Stena.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+
+    .Projects
+    {
+        height: 45vh;
+    }
+
+    .coming-soon
+    {
+        font-size: 2em;
     }
 }
 
