--- a/style.css
+++ b/style.css
@@ -178,10 +178,11 @@ justify-content:space-between;
 {
      .btn-zayavka
     {
-        margin: -120px 0 0 -300px;
+        /* margin: -120px 0 0 -300px;
         margin-top: -10rem;
         margin-left: -8.5rem;
-        margin-bottom: 20rem;
+        margin-bottom: 20rem; */
+        margin-left: -8rem;
     } 
 } 
 
