--- a/style.css
+++ b/style.css
@@ -176,12 +176,14 @@ justify-content:space-between;
 
  @media(max-width:400px)
 {
-     .btn-zayavka
+
+    .btn--text
     {
-        /* margin: -120px 0 0 -300px;
-        margin-top: -10rem;
-        margin-left: -8.5rem;
-        margin-bottom: 20rem; */
+        top:2em;
+    }
+
+    .btn-zayavka
+    {
         margin-left: -8rem;
     } 
 } 
