--- a/style.css
+++ b/style.css
@@ -1190,10 +1190,77 @@ justify-content:space-between;
     flex-direction: column;
     text-align: center;
     height: 100vh;
-    background-color: gray;
+    color:white;
+    background-color: rgb(44, 43, 43);
 }
 
 .statement-text
 {
     margin-top: 50vh;
+}
+
+.text-zayavka
+{
+    display: flex;
+    flex-direction: column;
+    margin-top: 30vh;
+    width: 100%;
+    margin-left: 2em;
+    font-size: 20px;
+    letter-spacing: 2px;
+}
+
+.text-zayavka1
+{
+    display: flex;
+    flex-direction: row;
+}
+
+.name-and-family
+{
+    border-bottom: 3px gray solid;
+    background-color: rgb(44, 43, 43);
+    color: gray;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    margin-top: -.2em;
+    margin-left: 1em;
+    margin-right: .5em;
+    height: 2em;
+    text-align: center;
+    outline: none;
+}
+
+.text-zayavka2
+{
+    display: flex;
+    flex-direction: row;
+}
+
+.name-company
+{
+    border-bottom: 3px gray solid;
+    background-color: rgb(44, 43, 43);
+    color: gray;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    margin-top: -.2em;
+    margin-right: .5em;
+    height: 2em;
+    text-align: center;
+    outline: none;
+}
+
+.text-zayavka3
+{
+    display: flex;
+    flex-direction: row;
+}
+
+.text-zayavka4
+{
+    display: flex;
+    flex-direction: row;
 }
