--- a/style.css
+++ b/style.css
@@ -1259,8 +1259,55 @@ justify-content:space-between;
     flex-direction: row;
 }
 
+.tel-company
+{
+    border-bottom: 3px gray solid;
+    background-color: rgb(44, 43, 43);
+    color: gray;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    margin-top: -.2em;
+    margin-right: .5em;
+    height: 2em;
+    text-align: center;
+    outline: none;
+}
+
 .text-zayavka4
 {
     display: flex;
     flex-direction: row;
+}
+
+.email-company
+{
+    border-bottom: 3px gray solid;
+    background-color: rgb(44, 43, 43);
+    color: gray;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    margin-top: -.2em;
+    margin-right: .5em;
+    height: 2em;
+    text-align: center;
+    outline: none;
+    margin-left: 1em;
+}
+
+.project-descriptions
+{
+    border-bottom: 3px gray solid;
+    background-color: rgb(44, 43, 43);
+    color: gray;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    margin-top: -.2em;
+    margin-right: .5em;
+    height: 2em;
+    text-align: center;
+    outline: none;
+    width: 40em;
 }
